Fixing white space under footer

--- a/css/extra/scrolling-nav.css
+++ b/css/extra/scrolling-nav.css
@@ -60,7 +60,7 @@ of those sections to manage the look and feel of the site. */
 }
 .footer-section {
     height: 15px;
-    padding-top: 500px;
+    padding-top: 10px;
     text-align: center;
-    background: #fff
+    background: #fff;
 }
